RESOLVED FIXED117293
[Gtk] Connection is leaking when WebProcess is terminated
https://bugs.webkit.org/show_bug.cgi?id=117293
Summary [Gtk] Connection is leaking when WebProcess is terminated
Rafael Brandao
Reported 2013-06-06 06:35:45 PDT
[Gtk] Connection is leaking when WebProcess is terminated
Attachments
Patch (1.92 KB, patch)
2013-06-06 06:44 PDT, Rafael Brandao
no flags
Rafael Brandao
Comment 1 2013-06-06 06:44:30 PDT
Martin Robinson
Comment 2 2013-06-06 07:17:22 PDT
Comment on attachment 203929 [details] Patch Nice catch.
WebKit Commit Bot
Comment 3 2013-06-06 07:41:12 PDT
Comment on attachment 203929 [details] Patch Clearing flags on attachment: 203929 Committed r151270: <http://trac.webkit.org/changeset/151270>
WebKit Commit Bot
Comment 4 2013-06-06 07:41:15 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.