[Gtk] Connection is leaking when WebProcess is terminated https://bugs.webkit.org/show_bug.cgi?id=117293

Reviewed by Martin Robinson.

Connection is leaking because WorkQueue::SocketEventSource inherits from
WorkQueue::EventSource but when it is destroyed, the actual destructor running
is the one from base class; however, subclass contains a function binded from
Connection (m_closeFunction) and we need to do this extra cleanup, otherwise
WorkQueue will keep Connection alive. A better explanation of this fix is provided
on http://stackoverflow.com/questions/461203/when-to-use-virtual-destructors

A quick way to see the leak is to change WK2 test "ReloadPageAfterCrash" to terminate
WebProcess N times and add a printf on Connection destructor.

* Platform/gtk/WorkQueueGtk.cpp:
(WorkQueue::EventSource::~EventSource): Adds a virtual destructor to enable
the subclass to do its own cleanup.


Canonical link: https://commits.webkit.org/135543@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@151270 268f45cc-cd09-0410-ab3c-d52691b4dbfc