Source/WebKit2/Platform/gtk/WorkQueueGtk.cpp
@@ -42,6 +42,8 @@ public:
         ASSERT(workQueue);
     }
 
+    virtual ~EventSource() { }
+
     void performWork()
     {
         m_function();
